samples/_failures_safe/1761409272_6437b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50f43e45.c: In function ‘main’:
./samples/SAFE/__tmp_50f43e45.c:134:5: error: expected expression at end of input
  134 |     while (idx < rows1 *
      |     ^~~~~
./samples/SAFE/__tmp_50f43e45.c:134:5: error: expected declaration or statement at end of input
